Changed to JDK Base 64 decoding